Fix layout for spacing - topics / hubs / news

--- a/themes/collabco_theme/css/style.css
+++ b/themes/collabco_theme/css/style.css
@@ -1087,7 +1087,7 @@ ul.recent_topicslist li.views-row-first {
 .index_item {
  display: block;
  border-bottom: 1px solid #F2F2F2;
- padding: 15px 10px 15px 0;
+ padding: 10px 0 20px 0;
 }
 
 .index_item h3{
